package org.yourcompany.Parking.vehicles;

public class Camio extends Vehicle {

    public Camio(String matricula) {
        this.matricula = matricula;
        this.mida = MidaVehicle.GRAN;
    }

}
