package org.yourcompany.Parking.vehicles;

public class Cotxe extends Vehicle {

    public Cotxe(String matricula) {
        this.matricula = matricula;
        this.mida = MidaVehicle.MITJA;
    }

}
