package org.yourcompany.Parking.vehicles;

public enum MidaVehicle {
    PETIT,
    MITJA,
    GRAN
}
