package org.yourcompany.Parking.vehicles;

public class Motocicleta extends Vehicle {

    public Motocicleta(String matricula) {
        this.matricula = matricula;
        this.mida = MidaVehicle.PETIT;
    }

}
