@startuml

enum MidaVehicle {
    PETIT
    MITJA
    GRAN
}

abstract class Vehicle {
    - matricula : String
    - mida : MidaVehicle
    
    + getMatricula() : String
    + getMida() : MidaVehicle
}

Vehicle "1" --> "1" MidaVehicle

class Motocicleta {
    + Motocicleta(matricula : String)
}

class Cotxe {
    + Cotxe(matricula : String)
}

class Camio {
    + Camio(matricula : String)
}

Vehicle <|-- Motocicleta
Vehicle <|-- Cotxe
Vehicle <|-- Camio


class Coordenada {
    - x : double
    - y : double
    
    + getX() : double
    + getY() : double
}


abstract class PlacaAparcament {
    - numero : int
    - vehicleAparcat : Vehicle
    - coordenades : Coordenada[]
    
    + aparcar(vehicle : Vehicle) : void
    + desAparcar() : void
    + estaLliure() : boolean
    + isOcupada() : boolean
    + getNumero() : int
}

PlacaAparcament "1" --> "*" Coordenada

class PlacaCompacta {
    + compatible(vehicle : Vehicle) : boolean
}

class PlacaRegular {
    + compatible(vehicle : Vehicle) : boolean
}

class PlacaGran {
    + compatible(vehicle : Vehicle) : boolean
}

PlacaAparcament <|-- PlacaCompacta
PlacaAparcament <|-- PlacaRegular
PlacaAparcament <|-- PlacaGran


class Ticket {
    - numero : int
    - vehicle : Vehicle
    - placa : PlacaAparcament
    - entrada : LocalDateTime
    - sortida : LocalDateTime
    
    + getNumero() : int
    + getVehicle() : Vehicle
    + getPlaça() : PlacaAparcament
    + setSortida() : void
    + calcularMinutsEstada() : long
}

Ticket --> Vehicle
Ticket --> PlacaAparcament


class PlacesParking {
    - places : ArrayList<PlacaAparcament>
    - tickets : ArrayList<Ticket>
    + PREU_MINUT : double
    
    + aparcar(vehicle : Vehicle) : Ticket
    + desaparcar(ticket : Ticket) : double
    + getTickets(numero : int) : Ticket
    + mostrarEstat() : void
}

PlacesParking "1" --> "*" PlacaAparcament
PlacesParking "1" --> "*" Ticket

@enduml
